# cool-compiler

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  mainpage.md
cheatsheets/: About running lexer.txt  run a cool program.txt
examples/: README.md  hello_world.cl  hello_world.s  list.s
pa1/: README.md  atoi.cl  stack.cl
pa2/: CMakeLists.txt  README.md  cool.flex  lexer-main.cc  test.cl
pa3/: CMakeLists.txt  README.md  bad.cl  cool.y  good.cl  myparser  parser-main.cc
pa4/: CMakeLists.txt  README.md  bad-cycle.cl  bad-repeat-attr.cl  bad-repeat-method.cl  bad-repeating.cl  bad-tc.cl  bad.cl  db.cl  good-another.cl  good-meth.cl  good-tc.cl  good-tc2.cl  good.cl  mysemant  semant-main.cc
pa5/: CMakeLists.txt  README.md  assign.cl  assign.s  cgen-main.cc  check.cl  check.s  example.cl  example.s  hello-recv-good.s  hello-recv.cl  hello-scope-good.s  hello-scope.cl  hello-world.cl  hello-world.s  hello-wrap-good.s  hello-wrap.s  if-good.s  if.cl  if.s  let-good.s  let.cl  loop.cl  loop.s  mycoolc  retval-good-2.s  retval-good.s  retval.cl  retval.s  selftype-good.s  selftype.cl
pa5/Small_tests/: case-good.s  case.cl  case.s  counttemp.cl  counttemp.s  equal.cl  equal.s  example.s  hello-recv-good-2.s  hello-recv.cl  hello-recv.s  hello-scope.s  hello-wrap.cl  hello-wrap.s  if.cl  if.s  let.cl  let.s  loop-good.s  loop.cl  loop.s  retval.cl  retval.s  selftype.cl  selftype.s  stack.cl  stack.s  staticdisp.cl  staticdisp.s  void.cl  void.s  what.s
pax/: CMakeLists.txt  README.md
src/: CMakeLists.txt  _newly_defined.txt  ast-lexer.cpp  ast-parser.cpp  ast.cc  ast_consumer.cc  cgen.cc  cgen_supp.cc  semant.cc  stringtab.cc  token-lexer.cpp  utilities.cc
src/include/: ast-parser.hpp  ast.h  ast_consumer.h  ast_fwd.h  ast_parse.h  ast_supp.h  cgen.h  cgen_supp.h  cool-parser.hpp  cool_parse.h  emit.h  scopedtab.h  semant.h  stringtab.h  utilities.h
test/: README.md
test/integration/: CMakeLists.txt  cgen-test.sh  coolc-test.sh  lexer-test.sh  parser-test.sh  runner.sh  semant-test.sh
test/integration/cgen/: hello.test  hello.test.stdout
test/integration/lexer/: test.test  test.test.stdout
test/integration/parser/: basic_class.test.stdout
test/integration/semant/: undefined_class.test.stderr
test/unit/: CMakeLists.txt  main.cc  test_ast.cc  test_scopedtab.cc  test_stringtab.cc  test_utilities.cc
trials/: hello_stack.cl
